'fix gap'

--- a/src/App.css
+++ b/src/App.css
@@ -199,6 +199,7 @@
   width: 25px;
   height: 25px;
   opacity: 1;
+  gap: 15px;
 }
 
 .rate:nth-child(2){
